Fixing background image zoom-in on smaller devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -150,7 +150,7 @@ ion-icon{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
+    height: auto;
     overflow: hidden;
 }
 
